feat: add register flow
